<?xml version="1.0"?>
<package format="2">
  <name>dynamixel_sdk_robot</name>
  <version>3.7.51</version>
  <description>The DYNAMIXEL SDK ROS package for jail_breaker</description>

  <author email="yoneda@jsk.imi.i.u-tokyo.ac.jp">kyoneda</author> -->
  <maintainer email="yoneda@jsk.imi.i.u-tokyo.ac.jp">kyoneda</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>dynamixel_sdk</depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
